Fix button segement links collapsing on each other

--- a/frontend/src/components/Board/BuyParts/index.module.scss
+++ b/frontend/src/components/Board/BuyParts/index.module.scss
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 2rem;
   }
 
   .buttonText {
